# advent-of-code

./: .gitignore  Cargo.toml  README.md  out.txt
data/: meta.json
python/: day825.py
src/: cli.rs  day.rs  grid.rs  main.rs
src/solver/: day_10_21.rs  day_11_21.rs  day_12_21.rs  day_13_21.rs  day_14_21.rs  day_15_21.rs  day_16_21.rs  day_17_21.rs  day_18_21.rs  day_19_21.rs  day_1_21.rs  day_1_22.rs  day_2_21.rs  day_3_21.rs  day_4_21.rs  day_5_21.rs  day_6_21.rs  day_7_21.rs  day_8_21.rs  day_9_21.rs  mod.rs
src/solver/year_2021/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_2.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  mod.rs
src/solver/year_2024/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_2.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  mod.rs
src/solver/year_2025/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  mod.rs
src/utils/: grid.rs  mod.rs  ranges.rs
utils/: Cargo.toml
utils/src/: backtracking.rs  direction.rs  extensions.rs  grid.rs  lib.rs  ranges.rs
