[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["utils"]

[dependencies]
utils = { path = "utils" }
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["cargo", "derive"] }
colored = "2.1.0"
glam = "0.29.2"
itertools = "0.13.0"
lazy_static = "1.5.0"
memoize = "0.4.2"
rstest = "0.21.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
smallset = "0.1.1"
thiserror = "1.0.63"
smallvec = "1.13.2"
enumset = "1.1.5"
pathfinding = "4.10.0"
indexmap = "2.2.6"
compact_str = "0.8.0"
num = "0.4.3"
bitvec = "1.0.1"
jiter = "0.5.0"
nalgebra = "0.33.0"
bimap = "0.6.3"
regex = "1.11.1"
rayon = "1.10.0"
hashbrown = "0.15.2"

[profile.profiling]
inherits = "release"
debug = true

